[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { version = "0.1.0", path = "../engine" }
order_book = { version = "0.1.0", path = "../order_book" }
protocol = { git = "https://github.com/A1tura/protocol.git", version = "0.1.0" }
tokio = {version = "1.50.0", features = ["full"] }
